--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://your-backend-url.railway.app/api/$1"
+      "destination": "https://crop-cure-chat-backend.onrender.com"
     },
     {
       "source": "/(.*)",
