--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://crop-cure-chat-backend.onrender.com/api/$1"
+      "destination": "https://crop-cure-chat-frontend-ipey.vercel.app//api/$1"
     },
     {
       "source": "/(.*)",
