--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://crop-cure-chat-backend.onrender.com//api/$1"
+      "destination": "https://render.com/docs/web-services#port-binding//api/$1"
     },
     {
       "source": "/(.*)",
